--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -68,7 +68,7 @@
             <h1>Major Assignment 4 - Part2</h1>
             <h3>by Abhijot Bedi (01908371)</h3>
         </div>
-        <h6 style="text-align: center; text-transform: capitalize; margin-top: 3cm;">The plots show the household income across the US in 2019, and cartogram data was made in QGIS on the difference of total household income and household income where people are sicty and above.</h6>
+        <h6 style="text-align: center; text-transform: capitalize; margin-top: 3cm;">The plots show the household income across the US in 2019, and cartogram data was made in QGIS on the difference of total household income and household income where people are sixty years and above.</h6>
         <div class="parentdiv">
             <div class="child1" style="width: 45%; float: left;">
                 <svg id="svg_choropleth" width="40vw" height="80vh" viewBox="0 0 1000 800"></svg>
